--- a/HealthyPact_Notebooks/Final Project Demand Forecasting.ipynb
+++ b/HealthyPact_Notebooks/Final Project Demand Forecasting.ipynb
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2149,7 +2149,7 @@
     "# Create future dataframe\n",
     "future = model.make_future_dataframe(periods=6, freq='M')\n",
     "\n",
-    "# Add future values of regressors (assume average of last 6 months for now)\n",
+    "# Add future values of regressors \n",
     "recent = monthly_data.iloc[-6:].mean()\n",
     "future['CPI'] = recent['CPI']\n",
     "future['Campaigns'] = recent['Campaigns']\n",
